Fix GIO build on Solaris

Major and minor are defined in sys/mkdev.h on Solaris

Patch by Fabian Groffen
https://bugzilla.gnome.org/show_bug.cgi?id=637013